--- a/node.js-app/mongodb/secret.yaml
+++ b/node.js-app/mongodb/secret.yaml
@@ -4,7 +4,5 @@ metadata:
   name: mongodb
 type: Opaque
 data:
-  MONGO_ROOT_USERNAME: YWRtaW4=
-  MONGO_ROOT_PASSWORD: MTIzNGFkbWlu
-  MONGO_USERNAME: YW1pcmE=
-  MONGO_PASSWORD: MTIzNGFtaXJh
+  MONGO_INITDB_ROOT_USERNAME: YW1pcmE=
+  MONGO_INITDB_ROOT_PASSWORD: MTIzNGFtaXJh
